--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,21 @@
 extends layout
 
 block content
-
+  .portals.mdl-layout.mdl-js-layout
+    main.mdl-layout__content
+      .mdl-grid
+        .mdl-cell.mdl-cell--12-col
+          .philosophy.mdl-card.mdl-shadow--2dp
+            .mdl-card__title
+            .mdl-card__supporting-text
+              | Philosophy
+        .mdl-cell.mdl-cell--6-col
+          .music.mdl-card.mdl-shadow--2dp
+            .mdl-card__title.mdl-card--expand
+            .mdl-card__supporting-text
+              | Music
+        .mdl-cell.mdl-cell--6-col
+          .cs.mdl-card.mdl-shadow--2dp
+            .mdl-card__title.mdl-card--expand
+            .mdl-card__supporting-text
+              | Computer Science
