use a grey background

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .portals.mdl-layout.mdl-js-layout
+  .portals.mdl-layout.mdl-js-layout.mdl-color--grey-100 
     main.mdl-layout__content
       .mdl-grid
         .mdl-cell.mdl-cell--12-col
