--- a/views/index.jade
+++ b/views/index.jade
@@ -19,3 +19,8 @@ block content
             .mdl-card__title.mdl-card--expand
             .mdl-card__supporting-text
               | Computer Science
+        .mdl-cell.mdl-cell--6-col
+          .literature.mdl-card.mdl-shadow--2dp
+            .mdl-card__title.mdl-card--expand
+            .mdl-card__supporting-text
+              | Literature
