don't use google fonts since it's blocked in china mainland

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title= title
     script(src='/node_modules/material-design-lite/material.min.js')
     link(rel='stylesheet', href='/node_modules/material-design-lite/material.min.css')
-    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+    link(rel='stylesheet', href='http://fonts.useso.com/icon?family=Material+Icons')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
