--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     script(src='/node_modules/material-design-lite/material.min.js')
     link(rel='stylesheet', href='/node_modules/material-design-lite/material.min.css')
     link(rel='stylesheet', href='http://fonts.useso.com/icon?family=Material+Icons')
