--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1')
     script(src='/node_modules/material-design-lite/material.min.js')
+    script(src='//cdn.bootcss.com/jquery/2.1.4/jquery.min.js')
+    script(src='/javascripts/script.js')
     link(rel='stylesheet', href='/node_modules/material-design-lite/material.min.css')
     link(rel='stylesheet', href='http://fonts.useso.com/icon?family=Material+Icons')
     link(rel='stylesheet', href='/stylesheets/style.css')
